refresh.js cleaning

--- a/views/index.jade
+++ b/views/index.jade
@@ -26,4 +26,4 @@ html
                 #list
             column(cols='5')
                 h3 Preview
-                #preview
+                img#preview(src='')
