Server-based html generation

--- a/views/index.pug
+++ b/views/index.pug
@@ -19,7 +19,7 @@ html
                 p.
                     Данный сервис позволяет определить уровень гетероплазмии для каждой нуклеотидной позиции мтДНК по результатам NGS.<br/>
                     Для FASTQ-файлов выравнивание коротких прочтений производится при помощи BWA относительно последовательности RSRS.<br/>
-                    Обработка файлов может занимать достаточно продолжительное время.
+                    Обработка файлов может занимать продолжительное время.
         row
             column(cols='1')
             column(cols='3')
@@ -30,4 +30,5 @@ html
                 #list
             column(cols='5')
                 h4 Результат:
-                img#preview(src='')
+                #label
+                img#preview(src='/img/blank.png')
